--- a/src/components/Form/UserPhoneInput.css
+++ b/src/components/Form/UserPhoneInput.css
@@ -6,13 +6,14 @@
 
 .react-tel-input .form-control {
   margin-bottom: 24px;
+  margin-left: 5px;
   padding-left: 0 !important;
-  width: 160px;
+  width: 200px;
   background-color: transparent;
 
   padding-left: 50px;
   border: none;
-  border-bottom: 1px solid rgb(224, 224, 224);
+  /* border-bottom: 1px solid rgb(224, 224, 224); */
 }
 
 .react-tel-input .flag-dropdown {
@@ -34,10 +35,11 @@
 
 @media screen and (min-width: 768px) {
   .react-tel-input .form-control {
-    font-size: 12px;
+    font-family: 'Circle', sans-serif;
+    font-size: 14px;
     margin-left: 34px;
-    border-bottom: 1px solid rgb(224, 224, 224);
-    width: 160px;
+    /* border-bottom: 1px solid rgb(224, 224, 224); */
+    width: 240px;
   }
   .react-tel-input .flag-dropdown {
     background-color: transparent;
@@ -53,7 +55,7 @@
   .react-tel-input .form-control {
     font-size: 15px;
     margin-left: 35px;
-    width: 170px;
+    width: 240px;
   }
   .react-tel-input .flag-dropdown {
     display: block;
