--- a/src/components/Form/UserPhoneInput.css
+++ b/src/components/Form/UserPhoneInput.css
@@ -2,11 +2,12 @@
   font-family: 'Circle', sans-serif;
   font-weight: 400;
   font-size: 12px;
+  text-align: left;
 }
 
 .react-tel-input .form-control {
   margin-bottom: 24px;
-  margin-left: 5px;
+  margin-left: 50px;
   padding-left: 0 !important;
   width: 200px;
   background-color: transparent;
@@ -36,15 +37,17 @@
 @media screen and (min-width: 768px) {
   .react-tel-input .form-control {
     font-family: 'Circle', sans-serif;
-    font-size: 14px;
-    margin-left: 34px;
+    font-size: 18px;
+    margin-left: 80px;
     /* border-bottom: 1px solid rgb(224, 224, 224); */
-    width: 240px;
+    width: 410px;
+    text-align: left;
   }
   .react-tel-input .flag-dropdown {
     background-color: transparent;
     border: none;
     display: block;
+    margin-left: 30px;
   }
   .react-tel-input {
     width: 100%;
@@ -54,7 +57,7 @@
 @media screen and (min-width: 1280px) {
   .react-tel-input .form-control {
     font-size: 15px;
-    margin-left: 35px;
+    margin-left: 70px;
     width: 240px;
   }
   .react-tel-input .flag-dropdown {
