--- a/src/components/UserData/UserDataItem/UserPhoneInput.css
+++ b/src/components/UserData/UserDataItem/UserPhoneInput.css
@@ -16,7 +16,7 @@
 @media screen and (min-width: 320px) {
   .react-tel-input .form-control {
     font-size: 12px;
-    padding-left: 10px;
+    padding-left: 0;
     margin-left: 12px;
   }
   .react-tel-input .flag-dropdown {
